--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,23 +1,27 @@
 {{ define "main" }}
 
-<h1>About</h1>
+<h1>Hello,</h1>
+<br />
+<p>I am a senior backend engineer with 12+ years of experience. I started my adventure doing QA for a fintech company more than a decade ago, where I learned to code by breaking things.</p>
+
+<p>Many years later, I am still breaking things.</p>
+
+<p>I am currently serving as Technical Director at a consulting agency where I lead multiple dev teams and help manage an entire department of ~30 engineers</p>
 
 <p>
-This is a triumph. I'm writing a note here: "Huge Success". It's hard to overstate
-My satisfaction.
+    Find out more about my <a href="/skills">Skills</a> or read about my thoughts on <a href="/leadership">Leadership</a> and <a href="/culture">Culture</a>
 </p>
-<p>
-    Aperture Science:
-    We do what we must
-    Because we can
-    For the good of all of us
-    Except the ones who are dead
-</p>
+
 <br/>
-
-<p>
-    Find out more about my <a href="/skills">Skills here</a>
-</p>
+<br/>
+<br/>
+<blockquote>
+    <div>This is a triumph. I'm writing a note here: "Huge Success". It's hard to overstate My satisfaction.</div>
+    <div>Aperture Science: We do what we must because we can</div>
+    <div>For the good of all of us</div>
+    <div>Except the ones who are dead</div>
+    <div><i> --GLaDOS</i></div>
+</blockquote>
 
 <!--<div class="posts-list">-->
 <!--{{ with .Site.GetPage "/skills" }}-->
